# ohturyhmaviisi

./: .coverage  .gitignore  .pylintrc  LICENSE  README.md  app.py  coverage.xml  log.html  main.py  output.xml  pyproject.toml  reference_maker.py  reference_saver.py  report.html  retro.md  run.ps1  run.sh
.github/workflows/: python-app.yml
data/: references.bib  references.json  test_references.json
robot/: PIPE  viite.robot
src/: app.py  bibtex_exporter.py  main.py  reference_deleter.py  reference_editor.py  reference_lister.py  reference_maker.py  reference_saver.py  reference_tagger.py
tests/: conftest.py  example.py  test_app.py  test_bibtex_exporter.py  test_reference_deleter.py  test_reference_editor.py  test_reference_lister.py  test_reference_maker.py  test_reference_saver.py  test_reference_tagger.py
